# SwarmSimulator

./: .gitignore  CMakeLists.txt  GazeboGen.py  Helper.py  README.md  VicsekSwarm.py  init.json  main.py  sitl_launch.py  supportfiles.py  vicsek.py
NodeTests/: README.txt
NodeTests/NodeServer/: index.js  package.json
NodeTests/UnityClient/Assets/Scenes/: SampleScene.unity
NodeTests/UnityClient/Assets/Scripts/: CameraTemp.cs  DroneMovement.cs  UDP_Client.cs
NodeTests/UnityClient/ProjectSettings/: ProjectSettings.asset
NodeTests/UnityClient/UserSettings/Layouts/: default-2021.dwlt
include/: genericmultirotor.h  libAP_JSON.h  p_util.h  simplerover.h
models/UAM/: model.config  model.sdf
models/UAM/meshes/: Prop_CCW.dae  Prop_CW.dae
models/UAM_demo/: model.config  model.sdf
models/iris_with_standoffs_demo/: model.sdf
models/rover_ardupilot/: model.sdf
models/zephyr_delta_wing_ardupilot_demo/: delta_wing.sdf
osk/include/: block.h  sim.h  state.h  state_euler.h  state_mm.h  state_rk2.h
osk/src/: block.cpp  sim.cpp  state.cpp  state_euler.cpp  state_mm.cpp  state_rk2.cpp
osk/test/: _readme.txt  main.cpp  makefile.bcc  makefile.g++  model.cpp  model.h  test.py  testa.py  testb.py
scripts/: arm_takeoff.py  mavlink_takeoff_and_movement.py  movement.py
src/: CMDPlugin.cc  genericmultirotor.cpp  libAP_JSON.cpp  main.cpp  p_utils.cpp  simplerover.cpp  worldPluginTest.cc
worlds/: VicsekSwarm.world  base.world  cmdquad_test.world  cmdrover_test.world  multiuav_test.world  singleuav_test.world  test.world
